# parser_waifu

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ParserWaifu.pro  README.md  version.pri
3pp/: 3pp.pri  CMakeLists.txt
3pp/mecab/: CMakeLists.txt  README.md
3pp/mecab/mecab/: CMakeLists.txt
3pp/mecab/mecab/src/: CMakeLists.txt  common.h  make.bat  mmap.h  utils.cpp  utils.h  writer.cpp
3pp/toml/: toml.h
assets/: .gitignore
assets/dict/: dicts.toml
cmake/Modules/: LazyUtils.cmake  QtUtils.cmake
lib/: CMakeLists.txt  lib.pri
lib/parser/: internal.hpp  parser.cpp  parser.hpp
lib/utils/: utils.cpp  utils.hpp
src/: CMakeLists.txt  main.cpp
src/app/: config.cpp  config.hpp
src/ui/: about.cpp  about.hpp  about.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  message.cpp  message.hpp  styles.hpp
src/utils/: jp.cpp  jp.hpp
test/: CMakeLists.txt
test/lib/: parser.cpp  utils.cpp
